@@ -1,3 +1,9 @@
+2010-07-06  Ramon Novoa  <rnovoa@artica.es>
+
+	* pandora_windows_service.cc: Fixed the autotime feature. Was not
+	  working since tinyXML was removed. Merged some small improvements
+	  from trunk.
+
 2010-06-08  Ramon Novoa  <rnovoa@artica.es>
 
 	* windows/pandora_wmi.cc, modules/pandora_module_logevent.cc: Removed
